# stonesense

./: .gitignore  .pre-commit-config.yaml  Block.cpp  Block.h  BlockCondition.cpp  BlockCondition.h  BlockFactory.cpp  BlockFactory.h  BlockTree.cpp  BlockTree.h  BuildingConfiguration.cpp  BuildingConfiguration.h  CMakeLists.txt  Changelog.txt  ColorConfiguration.cpp  ColorConfiguration.h  Colors.xml  ConditionalSprite.cpp  ConditionalSprite.h  Config.cpp  Config.h  ConnectionState.cpp  ConnectionState.h  Constructions.cpp  Constructions.h  ContentBuildingReader.cpp  ContentBuildingReader.h  ContentLoader.cpp  ContentLoader.h  Contributions.txt  Copy of SpriteMaps.h  CreatureConfiguration.cpp  CreatureConfiguration.h  Creatures.cpp  Creatures.h  Creatures.xml  DFConnection.cpp  DFConnection.h  DumpInfo.cpp  DumpInfo.h  (+86 more)
.github/: pull_request_template.md
.github/workflows/: build.yml  clean-cache.yml
CMake/Modules/: FindAllegro.cmake
Fluids/: Fluids.xml  index.txt  water_2.xml
alleg-ssense/bin-linux/: liballegro.so.5.0  liballegro_color.so.5.0  liballegro_dialog.so.5.0  liballegro_font.so.5.0  liballegro_image.so.5.0  liballegro_main.so.5.0  liballegro_primitives.so.5.0  liballegro_ttf.so.5.0
alleg-ssense/lib/: allegro-static.lib  allegro.lib  allegro_color-static.lib  allegro_color.lib  allegro_font-static.lib  allegro_font.lib  allegro_image-static.lib  allegro_image.lib  allegro_main-static.lib  allegro_main.lib  allegro_primitives-static.lib  allegro_primitives.lib  allegro_ttf-static.lib  allegro_ttf.lib  freetype-static.lib
allegro/: Licence.txt  jmorecfg.h  physfs.h
allegro/allegro5/: allegro.h  allegro5.h  allegro_acodec.h  allegro_audio.h  allegro_color.h  allegro_direct3d.h  allegro_font.h  allegro_image.h  allegro_iphone.h  allegro_memfile.h  allegro_native_dialog.h  allegro_opengl.h  allegro_physfs.h  allegro_primitives.h  allegro_ttf.h  allegro_windows.h  altime.h  base.h  bealleg.h  bitmap.h  bitmap_io.h  bitmap_new.h  color.h  config.h  debug.h  display.h  display_new.h  error.h  events.h  file.h  fixed.h  fmaths.h  fshook.h  joystick.h  keyboard.h  keycodes.h  memfile.h  memory.h  mouse.h  path.h  (+7 more)
allegro/freetype/: freetype.h  ftbbox.h  ftglyph.h  ftimage.h  ftoutln.h  ftsnames.h  ftstroke.h  ftwinfnt.h
allegro/lib/: allegro-debug.lib  allegro.lib  allegro_dialog-debug.lib  allegro_dialog.lib  allegro_font-debug.lib  allegro_font.lib  allegro_image-debug.lib  allegro_image.lib  allegro_primitives-debug.lib  allegro_primitives.lib  allegro_ttf-debug.lib  allegro_ttf.lib
allegro/lib_msvs8/: alld.lib  alleg.lib
buildings/: ArmorStand.xml  Ashery.xml  Bed.xml  Blueprint.xml  Bowyers.xml  Bridge.xml  Butchers.xml  Cabinet.xml  Cage.xml  CageTrap.xml  Carpenter.xml  Chair.xml  Chest.xml  Clothiers.xml  Coffin.xml  Craftdwarfs.xml  Door.xml  Dyers.xml  Farm.xml  FarmersWorkshop.xml  Fishery.xml  Floodgate.xml  FloorBars.xml  FloorGrate.xml  Forge.xml  Gear.xml  GlassFurnace.xml  Hatch.xml  HorizontalAxle.xml  INFO generic.txt  Jewelers.xml  Kennels.xml  Kiln.xml  Kitchen.xml  Leatherworks.xml  Lever.xml  Loom.xml  MagmaForge.xml  MagmaGlassFurnace.xml  MagmaKiln.xml  (+38 more)
buildings/include/: sBlueprint.xml  ws3x3Blueprint.xml  ws5x5Blueprint.xml  wsBenches.xml  wsFPTub.xml  wsFurnace.xml  wsLowerBorder.xml  wsTub.xml  wsUpperBorder.xml
colors/: Colors_Grass.xml  Colors_Metal.xml  Colors_Stone_Gem.xml  Colors_Stone_Layer.xml  Colors_Stone_Mineral.xml  Colors_Stone_Soil.xml  Colors_Wood.xml  index.txt
configs/: init.txt  keybinds.txt
configs/stonesense/: stoneinit.txt
creatures/: Dwarves.xml  Elves.xml  Wildlife.xml  beefmo_domestics.xml  beefmo_large_ocean.xml  caravan_animals.xml  color_Dwarves.xml  elfs.xml  gobbos.xml  humies.xml  index.txt  wild_animals.xml
dfhack/: dfhack-debug.lib  dfhack.lib
dfhack/include/: config.h
docs/: Stonesense.rst  changelog.txt  history.txt
grasses/: grasses.xml  index.txt
loadpng/: loadpng.c  regpng.c  savepng.c
materials_info/: buildingdump.txt  creaturedump.txt  plantdump.txt  priofessiondump.txt  professionsdump.txt  stonedump.txt  treedump.txt  wooddump.txt
proto/: readme.txt
resources/: Artists.txt  Colors.xml  Sprite Guide.txt  index.txt  init.txt  keybinds.txt
resources/Fluids/: Fluids.xml  index.txt  water_2.xml
resources/buildings/: AnimalTrap.xml  ArmorStand.xml  Ashery.xml  Bed.xml  Blueprint.xml  Bookcase.xml  Bowyers.xml  Bridge.xml  Butchers.xml  Cabinet.xml  Cage.xml  CageTrap.xml  Carpenter.xml  Chair.xml  Chest.xml  Clothiers.xml  Coffin.xml  Craftdwarfs.xml  Craftsdwarfs.xml  DisplayFurniture.xml  Door.xml  Dyers.xml  Farm.xml  FarmersWorkshop.xml  Fishery.xml  Floodgate.xml  FloorBars.xml  FloorGrate.xml  Forge.xml  Gear.xml  GlassFurnace.xml  Hatch.xml  HorizontalAxle.xml  INFO generic.txt  Jewelers.xml  Kennels.xml  Kiln.xml  Kitchen.xml  Leatherworks.xml  Lever.xml  (+45 more)
resources/colors/: Colors.xml  Colors_Foliage.xml  Colors_Grass.xml  Colors_Grass_vherid.xml  Colors_Metal.xml  Colors_Stone_Gem.xml  Colors_Stone_Layer.xml  Colors_Stone_Mineral.xml  Colors_Stone_Soil.xml  Colors_Trees.xml  Colors_Wood.xml  Colors_Wood_New.xml  index.txt
resources/creatures/: Dwarves.xml  Elves.xml  Wildlife.xml  beefmo_domestics.xml  beefmo_large_ocean.xml  beefmo_subterranean.xml  caravan_animals.xml  clothed_Dwarves.xml  color_Dwarves.xml  elfs.xml  gobbos.xml  goblins.xml  humans.xml  humies.xml  index.txt  wild_animals.xml
resources/grasses/: grasses.xml  grasses_grayscale.xml  index.txt
resources/growths/: apple_trees_foliage.xml  base_trees_foliage.xml  fruits_citrus.xml  fruits_mediterranean.xml  fruits_standard.xml  fruits_temperate.xml  fruits_tropical.xml  gingko_trees_foliage.xml  index.txt  oak_trees_foliage.xml  pine_trees_foliage.xml  willow_trees_foliage.xml
terrain/: CraggyFloors.xml  CraggyWalls.xml  DefaultFloors.xml  DefaultWalls.xml  Floors.xml  Grass.xml  MaterialFloors.xml  MaterialWalls.xml  Test.xml  Walls.xml  floorborders.xml  grass.xml  index.txt
utilities/: blutmaker.py  stonesense.iss  texturebuilder.xcf
vegetation/: index.txt  shrubs.xml  trees.xml
(+298 files in other folders)
